# CAM-Pulse

./: .dockerignore  .env.example  .gitignore  BLOG_DRAFT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SKILL.md  SOCIAL_MEDIA_POSTS.md  camify.sh  claw.toml  coverage-baseline-2026-03-31.txt  docker-compose.yml  pyproject.toml
apps/: MAINTENANCE_STATUS.md
apps/assimilation_repo_upgrade_advisor/: README.md  demo_embedding_forge_report.json  pyproject.toml
apps/assimilation_repo_upgrade_advisor/advisor_app/: __init__.py  cli.py  knowledge_pack.py  models.py  recommender.py  repo_scan.py  report.py
apps/assimilation_repo_upgrade_advisor/tests/: test_cli.py  test_knowledge_pack.py  test_repo_scan.py
apps/assimilation_repo_upgrade_advisor/tests/fixtures/sample_repo/: README.md
demos/: 07-prism.sh  cam-pulse-demo.cast
docs/: AB_KNOWLEDGE_ABLATION_SHOWPIECE.md  ADVANCED_FEATURES.md  CAG_GUIDE.md  CAMIFY_OVERLAY_CLONE.md  CAMSEQ_LOCAL_SECURITY.md  CAM_BEGINNER_ASSIMILATION_GUIDE.md  CAM_COMMAND_DECISION_TREE.md  CAM_COMMAND_GUIDE.md  CAM_EXAMPLE_WORKFLOWS.md  CAM_FORGE_DECOUPLING_PLAN.md  CAM_IFY_REPO_GUIDE.md  CAM_OPERATOR_CHEATSHEET.md  CAM_PROJECT_CHARTER.md  CAM_PROVEN_CAPABILITIES.md  CAM_SHOWPIECE_BOOK_TO_SCREENPLAY.md  CAM_SHOWPIECE_CROSS_REPO_INTELLIGENCE.md  CAM_SHOWPIECE_EXPECTATION_LADDER.md  CAM_SHOWPIECE_MEDCSS_MODERNIZER.md  CAM_SHOWPIECE_PLUGIN_EVENT_SYSTEM.md  CAM_SHOWPIECE_PULSE_KNOWLEDGE_LOOP.md  CAM_SHOWPIECE_PULSE_USAGE_PROOF.md  CAM_SHOWPIECE_REPO_UPGRADE_ADVISOR.md  CAM_SHOWPIECE_TIDYHOME.md  CAM_STANDALONE_INSTANCE_GUIDE.md  CAM_SYMBOL_AWARE_ASSIMILATION_PLAN.md  FEDERATION_BRAIN_SHOWPIECE.md  GETTING_STARTED.md  GOVERNANCE_TUNING.md  HF_MOUNT_BENEFITS_EXPLAINED.md  KB_BOOTSTRAP_PLAYBOOKS.md  KV_CACHE_GUIDE.md  LOCAL_LLM_SETUP.md  MCP_INTEGRATION_GUIDE.md  PLAN_hf_mount_integration.md  PLAN_repo_freshness_monitor.md  PROOF_POINT_INDEX.md  SKYDATE_KB_SHOWPIECE.md  TROUBLESHOOTING.md  ab-proof.html  architecture.md  (+3 more)
forge-ui/: README.md  package-lock.json  package.json
knowledge/: skydate_kb.md
prompts/: agonyofdefeatures.md  app__mitigen.md  assumption-registry.md  capability-extract.md  claim-gate.md  debt-tracker.md  deepdive.md  docsRedo.md  driftx.md  endUXRedo.md  handoff.md  interview.md  ironclad.md  outcome-audit.md  project-context.md  regression-scan.md  repo-mine-go.md  repo-mine-misc.md  repo-mine-rust.md  repo-mine-typescript.md  repo-mine.md  sotappr.md  ultrathink.md  workspace-scan.md
pulse/: docker-compose.pulse.yml  pulse.toml
scripts/: analyze_ab_v3.py  build_demo_cast.py  (+23 more)
(+354 files in other folders)
