[project]
name = "claw"
version = "0.1.0"
description = "Codebase Learning & Autonomous Workforce — multi-model autonomous codebase enhancement"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "aiosqlite>=0.19.0",
    "sqlite-vec>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "gitpython>=3.1.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.0",
    # Dashboard server — claw.web.dashboard_server imports FastAPI at
    # module top level for its decorator-based routing, so fastapi has
    # to be a base dep. Gate 3 of validation_gate.py imports every
    # claw.* module to prove the package is self-consistent.
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.4.0",
]
ml = [
    "sentence-transformers>=2.2.0",
]
local = [
    "ollama>=0.4.0",
]
mlx = [
    "mlx-lm>=0.22.0",
    "mlx-embeddings>=0.1.0",
]
xai = [
    "xai-sdk>=1.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
treesitter = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]

[project.scripts]
cam = "claw.cli:app_main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"claw" = "src/claw"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["claw*"]

[tool.setuptools.package-data]
claw = ["data/seed/*.jsonl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
timeout_method = "signal"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
